--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     ]
   },
   "devDependencies": {
+    "@arco-plugins/vite-react": "^1.3.3",
     "@iconify/json": "^2.2.56",
     "@svgr/core": "^7.0.0",
     "@svgr/plugin-jsx": "^7.0.0",
