feat: 项目打包部署添加相对路径地址

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   "scripts": {
     "dev": "vite",
     "start": "vite",
-    "build": "cross-env CI=false vite build --base=./",
+    "build": "cross-env CI=false vite build --base=/english-study",
     "test": "echo \"No tests\"",
     "lint": "eslint .",
     "prettier": "prettier --write .",
